qc pass: interop0: framerelay dce
---------------------------------- 2026-01-03 12:10:13 26.1.3
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
qc pass: interop0: atmdxi
qc pass: interop0: framerelay ppp
qc pass: interop0: framerelay ietf
qc pass: interop0: lapb dte
qc pass: interop0: lapb dce
qc pass: interop0: lapb mod128
---------------------------------- 2026-01-03 14:55:10 26.1.3
no qc pass: interop0: atmdxi
no qc pass: atmsar encapsulation
no qc pass: atmdxi encapsulation
qc pass: atmdxi snap encapsulation
qc pass: atmdxi mux encapsulation
qc pass: atmdxi nlpid encapsulation
qc pass: atmsar snap encapsulation
qc pass: atmsar mux encapsulation
qc pass: atmsar nlpid encapsulation
qc pass: interop0: atmdxi snap
qc pass: interop0: atmdxi nlpid
---------------------------------- 2026-01-03 16:32:22 26.1.3
qc pass: interop0: framerelay gre
---------------------------------- 2026-01-03 23:37:20 26.1.3
qc pass: smds encapsulation
qc pass: smds dxi encapsulation
qc pass: smds nec encapsulation
qc pass: smds nec dxi encapsulation
qc pass: interop0: smds
qc pass: interop0: smds dxi
---------------------------------- 2026-01-04 07:08:11 26.1.4
qc pass: smds with ax25
qc pass: smds tunneling with capwap
qc pass: smds tunneling with dlsw
qc pass: smds tunneling with eoip
qc pass: smds tunneling with erspan
qc pass: smds tunneling with etherip
qc pass: smds tunneling with geneve
qc pass: smds with greppp
qc pass: smds with grefr
qc pass: smds over l2tp3
qc pass: smds tunneling with l2tp3
qc pass: smds tunneling with llcudp
qc pass: smds tunneling with lwapp
qc pass: smds tunneling with nvgre
qc pass: smds tunneling with packet over udp
qc pass: smds tunneling with sreth
qc pass: smds with tdmoudp
qc pass: smds tunneling with tzsp
qc pass: smds tunneling with uti
qc pass: smds tunneling with vxlan
qc pass: cross connect smds interfaces
qc pass: sgt smds encapsulation
qc pass: smds over mpls
qc pass: smds tunneling with mpls