@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.4-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-04 11:27:32, took 00:10:00, with 50 workers, on 857 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2026-01-04 12:00:48, took 00:09:55, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
